2026-01-13  Zhengyi Fu  <i@fuzy.me>

	Fix M-DEL

	* user-lisp/modify-other-keys.el
	(modify-other-keys--setup-input-decode-map): Use DEL instead of
	<backspace>.

2026-01-13  Zhengyi Fu  <i@fuzy.me>

	dotemacs theme customization

	* init.el (dotemacs-theme-refresh): Fix background color on terminal.
	Customize meow-insert-cursor face.

2026-01-13  Zhengyi Fu  <i@fuzy.me>

	Restore keybinding for `transpose-words'

	* init.el (corfu): Unset M-t in `corfu-popupinfo-map'.  Bind it in
	`corfu-map' instead.

2026-01-13  Zhengyi Fu  <i@fuzy.me>

	* init.el (dotemacs): Set property theme-immediate to t.

2026-01-13  Zhengyi Fu  <i@fuzy.me>

	* init.el (+init-fontsets): Use `set-face-font' to set default font.

2026-01-13  Zhengyi Fu  <i@fuzy.me>

	Make modus-vivendi background pure dark on terminals

	* init.el (dotemacs-theme-refresh): Use unspecified-bg on
	terminals when using dark themes.

2026-01-12  Zhengyi Fu  <i@fuzy.me>

	* init.el: Do not enable kkp.

2026-01-07  Zhengyi Fu  <i@fuzy.me>

	* scripts/claude: Add support for nix shell.

2026-01-07  Zhengyi Fu  <i@fuzy.me>

	* init.el: Do not use rage anymore.

2026-01-06  Zhengyi Fu  <i@fuzy.me>

	Remove AGENTS.md and bootstrap.sh

	* AGENTS.md:
	* bootstrap.sh: Remove.

2026-01-06  Zhengyi Fu  <i@fuzy.me>

	Do not use straight.el anymore

	* early-init.el:
	* init.el:
	* packages.el (straight-use-package):
	* straight/.gitignore:
	* straight/versions/dotemacs.el:

2026-01-05  Zhengyi Fu  <i@fuzy.me>

	* init.el (eat-tramp-shells): Do not customize any more.

	/bin/bash doesn't exist on all systems.

2026-01-05  Zhengyi Fu  <i@fuzy.me>

	Use /bin/sh in remote connections

	* init.el (remote-explicit-shell-file-name): Set
	`explicit-shell-file-name' to "/bin/sh".

	There are usually no /bin/bash on NixOS.

2026-01-05  Zhengyi Fu  <i@fuzy.me>

	Specify fonts for nerd icons

	* init.el (+init-fontsets): Specify fonts for nerd icons..
	(nerd-icons-set-font): Remove advice.  The ranges of nerd font